[package]
name = "zigc"
version = "0.0.1"
edition = "2021"
license-file = "./LICENSE"
description = "A tool for compiling and linking Zig libraries to Rust projects."
homepage = "https://docs.rs/zigc"
documentation = "https://docs.rs/zigc"
repository = "https://github.com/emilHof/zigc"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
osstrtools = "0.2.2"
