[package]
name = "zigc"
version = "0.0.2"
edition = "2021"
license-file = "./LICENSE"
description = "A tool for compiling and linking Zig libraries to Rust projects."
homepage = "https://docs.rs/zigc"
documentation = "https://docs.rs/zigc"
repository = "https://github.com/emilHof/zigc"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
log = ["chrono"]

[dependencies]
osstrtools = "0.2.2"
chrono = { version = "0.4.23", optional = true }
